[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Rooms/room.gd" type="Script" id=1]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.0153846, 0.0307692, 0.958974, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )
width = 32

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 0.699439, 0.025 )

[node name="Sprite" type="Sprite"]
position = Vector2( 3.05176e-05, 6.10352e-05 )
scale = Vector2( 5.5625, 174.5 )
texture = SubResource( 2 )
script = ExtResource( 1 )

[node name="LeftDoor" type="Area2D" parent="."]
position = Vector2( -16, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Collider" type="CollisionShape2D" parent="LeftDoor"]
scale = Vector2( 0.999999, 1 )
shape = SubResource( 3 )

[node name="RightDoor" type="Area2D" parent="."]
position = Vector2( 16, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Collider" type="CollisionShape2D" parent="RightDoor"]
scale = Vector2( 0.999999, 1 )
shape = SubResource( 3 )

[connection signal="area_entered" from="LeftDoor" to="." method="_on_LeftDoor_area_entered"]
[connection signal="area_entered" from="RightDoor" to="." method="_on_RightDoor_area_entered"]
